<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">MusicApp</string>
    <string name="fa_adjust">&#xf042;</string>
    <string name="fa_adn">&#xf170;</string>
    <string name="fa_align_center">&#xf037;</string>
    <string name="fa_align_justify">&#xf039;</string>
    <string name="fa_align_left">&#xf036;</string>
    <string name="fa_align_right">&#xf038;</string>
    <string name="fa_ambulance">&#xf0f9;</string>
    <string name="fa_anchor">&#xf13d;</string>
    <string name="fa_android">&#xf17b;</string>
    <string name="fa_angellist">&#xf209;</string>
    <string name="fa_angle_double_down">&#xf103;</string>
    <string name="fa_angle_double_left">&#xf100;</string>
    <string name="fa_angle_double_right">&#xf101;</string>
    <string name="fa_angle_double_up">&#xf102;</string>
    <string name="fa_angle_down">&#xf107;</string>
    <string name="fa_angle_left">&#xf104;</string>
    <string name="fa_angle_right">&#xf105;</string>
    <string name="fa_angle_up">&#xf106;</string>
    <string name="fa_apple">&#xf179;</string>
    <string name="fa_archive">&#xf187;</string>
    <string name="fa_area_chart">&#xf1fe;</string>
    <string name="fa_arrow_circle_down">&#xf0ab;</string>
    <string name="fa_arrow_circle_left">&#xf0a8;</string>
    <string name="fa_arrow_circle_o_down">&#xf01a;</string>
    <string name="fa_arrow_circle_o_left">&#xf190;</string>
    <string name="fa_arrow_circle_o_right">&#xf18e;</string>
    <string name="fa_arrow_circle_o_up">&#xf01b;</string>
    <string name="fa_arrow_circle_right">&#xf0a9;</string>
    <string name="fa_arrow_circle_up">&#xf0aa;</string>
    <string name="fa_arrow_down">&#xf063;</string>
    <string name="fa_arrow_left">&#xf060;</string>
    <string name="fa_arrow_right">&#xf061;</string>
    <string name="fa_arrow_up">&#xf062;</string>
    <string name="fa_arrows">&#xf047;</string>
    <string name="fa_arrows_alt">&#xf0b2;</string>
    <string name="fa_arrows_h">&#xf07e;</string>
    <string name="fa_arrows_v">&#xf07d;</string>
    <string name="fa_asterisk">&#xf069;</string>
    <string name="fa_at">&#xf1fa;</string>
    <string name="fa_automobile">&#xf1b9;</string>
    <string name="fa_backward">&#xf04a;</string>
    <string name="fa_ban">&#xf05e;</string>
    <string name="fa_bank">&#xf19c;</string>
    <string name="fa_bar_chart">&#xf080;</string>
    <string name="fa_bar_chart_o">&#xf080;</string>
    <string name="fa_barcode">&#xf02a;</string>
    <string name="fa_bars">&#xf0c9;</string>
    <string name="fa_beer">&#xf0fc;</string>
    <string name="fa_behance">&#xf1b4;</string>
    <string name="fa_behance_square">&#xf1b5;</string>
    <string name="fa_bell">&#xf0f3;</string>
    <string name="fa_bell_o">&#xf0a2;</string>
    <string name="fa_bell_slash">&#xf1f6;</string>
    <string name="fa_bell_slash_o">&#xf1f7;</string>
    <string name="fa_bicycle">&#xf206;</string>
    <string name="fa_binoculars">&#xf1e5;</string>
    <string name="fa_birthday_cake">&#xf1fd;</string>
    <string name="fa_bitbucket">&#xf171;</string>
    <string name="fa_bitbucket_square">&#xf172;</string>
    <string name="fa_bitcoin">&#xf15a;</string>
    <string name="fa_bold">&#xf032;</string>
    <string name="fa_bolt">&#xf0e7;</string>
    <string name="fa_bomb">&#xf1e2;</string>
    <string name="fa_book">&#xf02d;</string>
    <string name="fa_bookmark">&#xf02e;</string>
    <string name="fa_bookmark_o">&#xf097;</string>
    <string name="fa_briefcase">&#xf0b1;</string>
    <string name="fa_btc">&#xf15a;</string>
    <string name="fa_bug">&#xf188;</string>
    <string name="fa_building">&#xf1ad;</string>
    <string name="fa_building_o">&#xf0f7;</string>
    <string name="fa_bullhorn">&#xf0a1;</string>
    <string name="fa_bullseye">&#xf140;</string>
    <string name="fa_bus">&#xf207;</string>
    <string name="fa_cab">&#xf1ba;</string>
    <string name="fa_calculator">&#xf1ec;</string>
    <string name="fa_calendar">&#xf073;</string>
    <string name="fa_calendar_o">&#xf133;</string>
    <string name="fa_camera">&#xf030;</string>
    <string name="fa_camera_retro">&#xf083;</string>
    <string name="fa_car">&#xf1b9;</string>
    <string name="fa_caret_down">&#xf0d7;</string>
    <string name="fa_caret_left">&#xf0d9;</string>
    <string name="fa_caret_right">&#xf0da;</string>
    <string name="fa_caret_square_o_down">&#xf150;</string>
    <string name="fa_caret_square_o_left">&#xf191;</string>
    <string name="fa_caret_square_o_right">&#xf152;</string>
    <string name="fa_caret_square_o_up">&#xf151;</string>
    <string name="fa_caret_up">&#xf0d8;</string>
    <string name="fa_cc">&#xf20a;</string>
    <string name="fa_cc_amex">&#xf1f3;</string>
    <string name="fa_cc_discover">&#xf1f2;</string>
    <string name="fa_cc_mastercard">&#xf1f1;</string>
    <string name="fa_cc_paypal">&#xf1f4;</string>
    <string name="fa_cc_stripe">&#xf1f5;</string>
    <string name="fa_cc_visa">&#xf1f0;</string>
    <string name="fa_certificate">&#xf0a3;</string>
    <string name="fa_chain">&#xf0c1;</string>
    <string name="fa_chain_broken">&#xf127;</string>
    <string name="fa_check">&#xf00c;</string>
    <string name="fa_check_circle">&#xf058;</string>
    <string name="fa_check_circle_o">&#xf05d;</string>
    <string name="fa_check_square">&#xf14a;</string>
    <string name="fa_check_square_o">&#xf046;</string>
    <string name="fa_chevron_circle_down">&#xf13a;</string>
    <string name="fa_chevron_circle_left">&#xf137;</string>
    <string name="fa_chevron_circle_right">&#xf138;</string>
    <string name="fa_chevron_circle_up">&#xf139;</string>
    <string name="fa_chevron_down">&#xf078;</string>
    <string name="fa_chevron_left">&#xf053;</string>
    <string name="fa_chevron_right">&#xf054;</string>
    <string name="fa_chevron_up">&#xf077;</string>
    <string name="fa_child">&#xf1ae;</string>
    <string name="fa_circle">&#xf111;</string>
    <string name="fa_circle_o">&#xf10c;</string>
    <string name="fa_circle_o_notch">&#xf1ce;</string>
    <string name="fa_circle_thin">&#xf1db;</string>
    <string name="fa_clipboard">&#xf0ea;</string>
    <string name="fa_clock_o">&#xf017;</string>
    <string name="fa_close">&#xf00d;</string>
    <string name="fa_cloud">&#xf0c2;</string>
    <string name="fa_cloud_download">&#xf0ed;</string>
    <string name="fa_cloud_upload">&#xf0ee;</string>
    <string name="fa_cny">&#xf157;</string>
    <string name="fa_code">&#xf121;</string>
    <string name="fa_code_fork">&#xf126;</string>
    <string name="fa_codepen">&#xf1cb;</string>
    <string name="fa_coffee">&#xf0f4;</string>
    <string name="fa_cog">&#xf013;</string>
    <string name="fa_cogs">&#xf085;</string>
    <string name="fa_columns">&#xf0db;</string>
    <string name="fa_comment">&#xf075;</string>
    <string name="fa_comment_o">&#xf0e5;</string>
    <string name="fa_comments">&#xf086;</string>
    <string name="fa_comments_o">&#xf0e6;</string>
    <string name="fa_compass">&#xf14e;</string>
    <string name="fa_compress">&#xf066;</string>
    <string name="fa_copy">&#xf0c5;</string>
    <string name="fa_copyright">&#xf1f9;</string>
    <string name="fa_credit_card">&#xf09d;</string>
    <string name="fa_crop">&#xf125;</string>
    <string name="fa_crosshairs">&#xf05b;</string>
    <string name="fa_css3">&#xf13c;</string>
    <string name="fa_cube">&#xf1b2;</string>
    <string name="fa_cubes">&#xf1b3;</string>
    <string name="fa_cut">&#xf0c4;</string>
    <string name="fa_cutlery">&#xf0f5;</string>
    <string name="fa_dashboard">&#xf0e4;</string>
    <string name="fa_database">&#xf1c0;</string>
    <string name="fa_dedent">&#xf03b;</string>
    <string name="fa_delicious">&#xf1a5;</string>
    <string name="fa_desktop">&#xf108;</string>
    <string name="fa_deviantart">&#xf1bd;</string>
    <string name="fa_digg">&#xf1a6;</string>
    <string name="fa_dollar">&#xf155;</string>
    <string name="fa_dot_circle_o">&#xf192;</string>
    <string name="fa_download">&#xf019;</string>
    <string name="fa_dribbble">&#xf17d;</string>
    <string name="fa_dropbox">&#xf16b;</string>
    <string name="fa_drupal">&#xf1a9;</string>
    <string name="fa_edit">&#xf044;</string>
    <string name="fa_eject">&#xf052;</string>
    <string name="fa_ellipsis_h">&#xf141;</string>
    <string name="fa_ellipsis_v">&#xf142;</string>
    <string name="fa_empire">&#xf1d1;</string>
    <string name="fa_envelope">&#xf0e0;</string>
    <string name="fa_industry">&#xf275;</string>
    <string name="fa_address_card">&#xf2c2;</string>
    <string name="fa_black_tie">&#xf27e;</string>
    <string name="fa_back">&#xf104;</string>
    <string name="fa_envelope_o">&#xf003;</string>
    <string name="fa_envelope_square">&#xf199;</string>
    <string name="fa_eraser">&#xf12d;</string>
    <string name="fa_eur">&#xf153;</string>
    <string name="fa_euro">&#xf153;</string>
    <string name="fa_exchange">&#xf0ec;</string>
    <string name="fa_exclamation">&#xf12a;</string>
    <string name="fa_exclamation_circle">&#xf06a;</string>
    <string name="fa_exclamation_triangle">&#xf071;</string>
    <string name="fa_expand">&#xf065;</string>
    <string name="fa_external_link">&#xf08e;</string>
    <string name="fa_external_link_square">&#xf14c;</string>
    <string name="fa_eye">&#xf06e;</string>
    <string name="fa_eye_slash">&#xf070;</string>
    <string name="fa_eyedropper">&#xf1fb;</string>
    <string name="fa_facebook">&#xf09a;</string>
    <string name="fa_facebook_square">&#xf082;</string>
    <string name="fa_fast_backward">&#xf049;</string>
    <string name="fa_fast_forward">&#xf050;</string>
    <string name="fa_fax">&#xf1ac;</string>
    <string name="fa_female">&#xf182;</string>
    <string name="fa_fighter_jet">&#xf0fb;</string>
    <string name="fa_file">&#xf15b;</string>
    <string name="fa_file_archive_o">&#xf1c6;</string>
    <string name="fa_file_audio_o">&#xf1c7;</string>
    <string name="fa_file_code_o">&#xf1c9;</string>
    <string name="fa_file_excel_o">&#xf1c3;</string>
    <string name="fa_file_image_o">&#xf1c5;</string>
    <string name="fa_file_movie_o">&#xf1c8;</string>
    <string name="fa_file_o">&#xf016;</string>
    <string name="fa_file_pdf_o">&#xf1c1;</string>
    <string name="fa_file_photo_o">&#xf1c5;</string>
    <string name="fa_file_picture_o">&#xf1c5;</string>
    <string name="fa_file_powerpoint_o">&#xf1c4;</string>
    <string name="fa_file_sound_o">&#xf1c7;</string>
    <string name="fa_file_text">&#xf15c;</string>
    <string name="fa_file_text_o">&#xf0f6;</string>
    <string name="fa_file_video_o">&#xf1c8;</string>
    <string name="fa_search">&#xf002;</string>
    <string name="themes">Themes</string>
    <string name="ringtone_cutter">Ringtone Cutter</string>
    <string name="equaliser">Equaliser</string>
    <string name="drive_mode">Drive Mode</string>
    <string name="hidden_folder">Hidden Folder</string>
    <string name="scan_media">Scan Media</string>
    <string name="settings">Settings</string>
    <string name="faq">FAQ</string>
    <string name="feedback">Feedback</string>
    <string name="info">About</string>
    <string name="search_your_library">Search your library...</string>
    <string name="start_marker">Start marker</string>
    <string name="end_marker">End marker</string>
    <string name="rewind">Rewind</string>
    <string name="ffwd">Fast forward</string>
    <string name="start_label">Start:</string>
    <string name="end_label">End:</string>
    <string name="play">Play</string>
    <string name="sleep_timer">Sleep Timer</string>
    <string name="remove_ads">Remove ADS</string>
    <string name="songs">Songs</string>
    <string name="albums">Albums</string>
    <string name="artists">Artists</string>
    <string name="compose_shortcut_short_label1">Later</string>
    <string name="compose_shortcut_long_label1">Later</string>
    <string name="compose_disabled_message1">Later</string>
    <string name="quit">Quit</string>
</resources>