<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:id="@+id/editor_bg"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:gravity="center">
        <LinearLayout
            android:id="@+id/back_rc"
            android:layout_width="52dp"
            android:layout_height="match_parent"
            android:gravity="center">
            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/ic_back"
                android:tint="@color/white"
                android:background="?android:attr/actionBarItemBackground"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:gravity="center">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:textSize="16sp"
                android:fontFamily="@font/roboto_regular"
                android:textColor="@color/white"
                android:text="Ringtone Cutter"/>
        </LinearLayout>

        <TextView
            android:id="@+id/save_tone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="save"
            android:layout_gravity="center"
            android:textSize="14sp"
            android:gravity="center"
            android:layout_marginEnd="8dp"
            android:paddingHorizontal="8dp"
            android:textColor="@color/white"
            android:background="@drawable/white_rounded_semi_rectangle_stroke"
            />
    </LinearLayout>
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="0px"
        android:layout_marginTop="10dp"
        android:layout_weight="1">

        <!--ImageView
         android:id="@+id/bkgnd"
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
         android:scaleType="centerCrop"
         android:src="@drawable/bkgnd"-->

        <smarther.com.musicapp.Utils.WaveformView
            android:id="@+id/waveform"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent" />

        <smarther.com.musicapp.Utils.MarkerView
            android:id="@+id/startmarker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:contentDescription="@string/start_marker"
            android:nextFocusDown="@+id/endmarker"
            android:src="@drawable/marker_left" />

        <smarther.com.musicapp.Utils.MarkerView
            android:id="@+id/endmarker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:contentDescription="@string/end_marker"
            android:nextFocusDown="@+id/info"
            android:nextFocusUp="@+id/startmarker"
            android:src="@drawable/marker_right" />

    </RelativeLayout>

    <TextView
        android:id="@+id/info"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:nextFocusDown="@+id/play"
        android:nextFocusUp="@+id/endmarker" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center">


        <ImageButton
            android:id="@+id/rew"
            style="@android:style/MediaButton"
            android:layout_width="64dip"
            android:layout_height="50dip"
            android:layout_marginBottom="6dip"
            android:layout_marginTop="6dip"
            android:contentDescription="@string/rewind"
            android:src="@android:drawable/ic_media_previous" />

        <ImageButton
            android:id="@+id/play"
            style="@android:style/MediaButton"
            android:layout_width="71dip"
            android:layout_height="50dip"
            android:layout_marginBottom="6dip"
            android:layout_marginTop="6dip"
            android:contentDescription="@string/play"
            android:src="@android:drawable/ic_media_play" />

        <ImageButton
            android:id="@+id/ffwd"
            style="@android:style/MediaButton"
            android:layout_width="64dip"
            android:layout_height="50dip"
            android:layout_marginBottom="6dip"
            android:layout_marginRight="5dip"
            android:layout_marginTop="6dip"
            android:contentDescription="@string/ffwd"
            android:src="@android:drawable/ic_media_next" />

    </LinearLayout>

    <!--<LinearLayout style="@style/HorizontalDividerTop" />-->
    <!--<LinearLayout style="@style/HorizontalDividerBottom" />-->

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="66dip"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/mark_start"
            android:layout_width="wrap_content"
            android:layout_height="31dip"
            android:layout_marginTop="8dip"
            android:clickable="true"
            android:gravity="center"
            android:labelFor="@+id/starttext"
            android:text="@string/start_label"
            android:textColor="#ffffffff"
            android:textSize="14sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/starttext"
            android:layout_width="70dip"
            android:layout_height="38dip"
            android:layout_marginLeft="10dip"
            android:layout_marginRight="30dip"
            android:layout_marginTop="10dip"
            android:gravity="center"
            android:textColor="@color/white"
            android:inputType="number|numberDecimal"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/mark_end"
            android:layout_width="wrap_content"
            android:layout_height="31dip"
            android:layout_marginTop="8dip"
            android:clickable="true"
            android:gravity="center"
            android:labelFor="@+id/endtext"
            android:text="@string/end_label"
            android:textColor="#ffffffff"
            android:textSize="14sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/endtext"
            android:layout_width="70dip"
            android:layout_height="38dip"
            android:layout_marginLeft="10dip"
            android:layout_marginTop="10dip"
            android:gravity="center"
            android:textColor="@color/white"
            android:inputType="number|numberDecimal"
            android:textSize="16sp" />

    </LinearLayout>

</LinearLayout>
