<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:id="@+id/search_background"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.SearchActivity"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:gravity="center">
        <LinearLayout
            android:id="@+id/toggle_drawer"
            android:layout_width="52dp"
            android:layout_height="match_parent"
            android:gravity="center_vertical|bottom"
            android:layout_marginStart="16dp">
            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/ic_back"
                android:background="?android:attr/actionBarItemBackground"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:gravity="center"
            android:visibility="invisible"/>
    </LinearLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_gravity="center_vertical"
        android:gravity="center_vertical"
        style="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
        android:text="Search"
        android:singleLine="true"
        android:textColor="@color/white"
        android:textSize="32sp"
        android:textStyle="bold"
        android:layout_marginStart="16dp"
        />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:layout_margin="16sp">
        <View
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/rounded_rectangle_white"
            android:backgroundTint="@color/grey"
            android:alpha="0.3"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <LinearLayout
                android:layout_width="40dp"
                android:layout_height="match_parent"
                android:gravity="center">
                <TextView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:text="@string/fa_search"
                    android:textColor="@color/white"
                    android:gravity="center"
                    android:textSize="16sp"
                    android:fontFamily="@font/fontawesome" />
            </LinearLayout>
            <EditText
                android:id="@+id/search_edit_text"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textColor="@color/white"
                android:gravity="center_vertical"
                android:textSize="16sp"
                android:fontFamily="@font/roboto_regular"
                android:hint="@string/search_your_library"
                android:paddingStart="8dp"
                android:background="@android:color/transparent"
                android:textColorHint="@color/white"/>
            <LinearLayout
                android:layout_width="52dp"
                android:layout_height="match_parent"
                android:gravity="center"
                android:id="@+id/sound_recorder">
                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:src="@drawable/ic_sound_rec"
                    android:background="?android:attr/actionBarItemBackground"
                    />
            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.core.widget.NestedScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fillViewport="true">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <TextView
                        android:id="@+id/song_title_textview"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:gravity="center_vertical"
                        android:text="@string/songs"
                        android:singleLine="true"
                        android:textColor="@color/sandal"
                        android:textSize="24sp"
                        android:textStyle="bold"
                        android:visibility="gone"/>
                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/search_song_recycler"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:adjustViewBounds="true"
                        android:clipToPadding="false"
                        android:layout_marginTop="4dp"
                        android:visibility="gone"/>
                    <TextView
                        android:id="@+id/artist_title_textview"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:gravity="center_vertical"
                        android:text="@string/artists"
                        android:singleLine="true"
                        android:textColor="@color/sandal"
                        android:textSize="24sp"
                        android:textStyle="bold"
                        android:visibility="gone"/>
                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/search_artists_recycler"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:adjustViewBounds="true"
                        android:clipToPadding="false"
                        android:layout_marginTop="4dp"
                        android:visibility="gone"/>
                    <TextView
                        android:id="@+id/album_title_textview"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:gravity="center_vertical"
                        android:text="@string/albums"
                        android:singleLine="true"
                        android:textColor="@color/sandal"
                        android:textSize="24sp"
                        android:textStyle="bold"
                        android:visibility="gone"/>
                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/search_albums_recycler"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:adjustViewBounds="true"
                        android:clipToPadding="false"
                        android:layout_marginTop="4dp"
                        android:visibility="gone"/>
                </LinearLayout>

            </androidx.core.widget.NestedScrollView>


        </LinearLayout>
    </ScrollView>

</LinearLayout>